# docker-pipeline

./: Dockerfile  LICENSE  README.fr.md  README.md  justfile  pyproject.toml
.github/workflows/: ci-cd.yml
docs/: api.md  pipeline.md
pipelines/: example_pipeline.yaml  example_pipeline_advanced.yaml
src/pipeline_scheduler/: __init__.py  state.py
src/pipeline_scheduler/application/: runner.py  scheduler.py
src/pipeline_scheduler/domain/: __init__.py  models.py
src/pipeline_scheduler/infrastructure/: __init__.py  docker_client.py  templating.py
src/pipeline_scheduler/interfaces/: api.py  cli.py  server.py
src/pipeline_scheduler/utils/: tree.py
tests/: test_build_config.py  test_cli.py  test_runner.py
