[project]
name = "pipeline-scheduler"
version = "0.1.0"
description = "Docker pipeline scheduler using APScheduler, docker-py, Jinja2 and pydantic"
requires-python = "==3.14.*"
dependencies = [
    "docker",
    "apscheduler",
    "PyYAML",
    "Jinja2",
    "pydantic",
    "typer",
    "loguru",
    "fastapi",
    "uvicorn",
]

[tool.uv]
# uv will use pyproject to manage the environment

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
testing = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-html>=4.1.1",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "pytest-xdist>=3.8.0",
]